tests/typefunc_bad_ambiguous_call.stderr
tests/typefunc_bad_ambiguous_call.hop:7:2: error: HOP2016: ambiguous call
